cli/tests/type_definitions_for_export.ts
import { foo } from "./export_type_def.ts";

function bar(a: number): void {
  console.log(a);
}

bar(foo);
